Refactor: Renomeando Despesa para Movimento, novas funcionalidades e limpeza de builds